<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/my_widgets"
        android:textSize="30dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view"
        android:gravity="center"
        android:text="@string/ButtonText" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:contentDescription="@string/app_name"
        android:src="@drawable/flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_below="@+id/text_view"
        android:layout_toRightOf="@+id/button"
        android:gravity="center"
        android:layout_alignParentEnd="true" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/my_check"
        android:layout_below="@+id/imageButton2"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/my_switch"
        android:layout_below="@+id/imageButton2"
        android:layout_alignParentEnd="true" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_below="@+id/switch1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="fill"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/my_type" />

</RelativeLayout>